Fixed z-index in table paginator and bottom border

--- a/src/app/table/table.component.css
+++ b/src/app/table/table.component.css
@@ -18,6 +18,26 @@
     border-bottom: 20px solid #0c3e92;
     position: sticky;
     bottom: 0;
+    width: 100%;
+    z-index: 1;
+}
+
+mat-paginator {
+    position: sticky;
+    bottom: 0;
+    left: calc(100% - 420px);
+    width: 420px;
+    background-color: #0c3e92;
+    color: white;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    font-size: 0.8em;
+    height: auto;
+    border-top-left-radius: 25px;
+    z-index: 2;
+}
+
+.mat-paginator{
+    height: 36;
 }
 
 .table-container::-webkit-scrollbar {
@@ -33,23 +53,6 @@
     .table-container {
         width: 1325px;
     }
-}
-
-mat-paginator {
-    position: sticky;
-    bottom: 0;
-    left: calc(100% - 420px);
-    width: 420px;
-    background-color: #0c3e92;
-    color: white;
-    font-family: Roboto, "Helvetica Neue", sans-serif;
-    font-size: 0.8em;
-    height: auto;
-    border-top-left-radius: 25px;
-}
-
-.mat-paginator{
-    height: 36;
 }
   
 .test-table th:first-child {
